2010-08-11  Steve Block  <steveblock@google.com>

        Reviewed by Jeremy Orlow.

        Need EmptyDeviceOrientationClient and EmptyDeviceMotionClient for use with SVGImage
        https://bugs.webkit.org/show_bug.cgi?id=43848

        Tested by existing DeviceOrientation tests.

        * loader/EmptyClients.h:
        (WebCore::EmptyDeviceMotionClient::setController):
        (WebCore::EmptyDeviceMotionClient::startUpdating):
        (WebCore::EmptyDeviceMotionClient::stopUpdating):
        (WebCore::EmptyDeviceMotionClient::currentDeviceMotion):
        (WebCore::EmptyDeviceOrientationClient::setController):
        (WebCore::EmptyDeviceOrientationClient::startUpdating):
        (WebCore::EmptyDeviceOrientationClient::stopUpdating):
        (WebCore::EmptyDeviceOrientationClient::lastOrientation):
        * svg/graphics/SVGImage.cpp:
        (WebCore::SVGImage::dataChanged):

2010-08-10  Aaron Boodman  <aa@chromium.org>

        Reviewed by David Hyatt.

        Make the cascade level of "user" styles configurable
        https://bugs.webkit.org/show_bug.cgi?id=43457

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::CSSStyleSelector): Handle the case where user styles might have author level. Minor refactor.
        * dom/Document.cpp:
        (WebCore::Document::pageGroupUserSheets): Set isUserStyle on created stylesheet objects appropriately.
        * page/PageGroup.cpp:
        (WebCore::PageGroup::addUserStyleSheetToWorld): Add new optional "level" argument.
        * page/PageGroup.h: Ditto.
        * page/UserStyleSheet.h: Add level property.
        (WebCore::UserStyleSheet::):
        (WebCore::UserStyleSheet::UserStyleSheet):
        (WebCore::UserStyleSheet::setLevel):
        (WebCore::UserStyleSheet::level):

2010-08-11  Rob Buis  <rwlbuis@gmail.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=42042
        An empty value for xml:lang isn't considered
